@@ -1,5 +1,5 @@
 #!/bin/bash -x
-if [ -z "$2" ] || [ "$#" != 2 ]; then
+if [ -z "$2" ] || [ "$#" -lt 2 ]; then
     echo "need two args- [ html | pdf ], and the directory location to write the results to"
     exit 1
 fi
@@ -9,7 +9,13 @@ if [ "$1" != "html" ] && [ "$1" != "pdf" ]; then
     exit 2
 fi
 
+type="$1"
+shift
+out="$1"
+shift
+
 export SNAKEOIL_DEMANDLOAD_PROTECTION=n
-epydoc --${1} --no-frames --no-frames --graph=all -n pkgcore -u \
-    http://pkgcore.org/trac/pkgcore --show-imports --include-log \
-    --inheritance=included --quiet --simple-term -o "$2" pkgcore --exclude='pkgcore\.test\.*'
+export SNAKEOIL_DEMANDLOAD_DISABLED=y
+epydoc --"${type}" --no-frames --no-frames -n pkgcore --graph=classtree -u \
+    http://pkgcore.org/trac/pkgcore --show-imports --show-sourcecode --include-log --include-log \
+    --inheritance=included --quiet --exclude='pkgcore\.test\..*' --exclude='snakeoil\.test\..*' --simple-term pkgcore snakeoil -o "${out}" "$@" 
