@@ -28,7 +28,7 @@ demandload(globals(),
     "pkgcore.merge:engine",
     "pkgcore.fs.livefs:scan",
     "pkgcore.interfaces.data_source:local_source",
-    "pkgcore.fs.ops:offset_rewriter",
+    "pkgcore.fs.contents:offset_rewriter",
     "pkgcore.interfaces.data_source:data_source",
     "pkgcore.repository:wrapper",
     "pkgcore.package.mutated:MutatedPkg",
