@@ -227,3 +227,42 @@ class TestContentsSet(TestCase):
                 '/dir2/dir3/b'])
         obj = cs['/dir1']
         self.assertEqual(obj.mode, 0775)
+
+
+class Test_offset_rewriting(TestCase):
+
+    change_offset = staticmethod(contents.change_offset_rewriter)
+    offset_insert = staticmethod(contents.offset_rewriter)
+
+    def test_offset_rewriter(self):
+        f = ["/foon/%i" % x for x in xrange(10)]
+        f.extend("/foon/%i/blah" % x for x in xrange(5))
+        f = [fs.fsFile(x, strict=False) for x in f]
+        self.assertEqual(sorted(x.location for x in f),
+            sorted(x.location for x in self.offset_insert('/', f)))
+        self.assertEqual(
+            sorted('/usr%s' % x.location for x in f),
+            sorted(x.location for x in self.offset_insert('/usr', f)))
+
+    def test_it(self):
+        f = ["/foon/%i" % x for x in xrange(10)]
+        f.extend("/foon/%i/blah" % x for x in xrange(5))
+        f = [fs.fsFile(x, strict=False) for x in f]
+        self.assertEqual(sorted(x.location for x in f),
+            sorted(y.location for y in self.change_offset('/usr', '/',
+                (x.change_attributes(location='/usr%s' % x.location)
+                    for x in f)
+            )))
+        self.assertEqual(sorted(x.location for x in f),
+            sorted(y.location for y in self.change_offset('/usr', '/',
+                (x.change_attributes(location='/usr/%s' % x.location)
+                    for x in f)
+            )))
+        self.assertEqual(sorted("/usr" + x.location for x in f),
+            sorted(y.location for y in self.change_offset('/', '/usr',
+                (x.change_attributes(location='/%s' % x.location)
+                    for x in f)
+            )))
+
+
+
