@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* pkgcore.fs.ops.offset_rewriter -> pkgcore.fs.contents.offset_rewriter
+
 * various code cleanups, quite a few conversions to snakeoil.klass
   decorators/property tricks to simplify the code.
 
